[gd_scene load_steps=5 format=3 uid="uid://dox7bvx5bfsib"]

[ext_resource type="Script" path="res://Trade/Script/trade_manage.gd" id="1_f7xi3"]
[ext_resource type="Script" path="res://Trade/Script/trade_goods.gd" id="2_sqbnq"]
[ext_resource type="PackedScene" uid="uid://dovfytcll6bqb" path="res://Trade/Scene/TradeUI/trade_ui.tscn" id="3_phq2h"]
[ext_resource type="PackedScene" uid="uid://b21dow7f1jk64" path="res://Trade/Scene/BackPackUI/back_pack_ui.tscn" id="4_86vm7"]

[node name="TradeManage" type="Node2D" groups=["TradeManage"]]
visible = false
script = ExtResource("1_f7xi3")

[node name="PlayerTradeGoods" type="Node" parent="."]
script = ExtResource("2_sqbnq")
add_number = 180
add_g = true
cash = 500

[node name="TradeUI" parent="." groups=["TradeUI"] instance=ExtResource("3_phq2h")]
visible = false

[node name="BackPackUI" parent="." instance=ExtResource("4_86vm7")]

[editable path="TradeUI"]
